Add $(layout).on('endbounce',..) event

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -295,6 +295,9 @@ $("#pinbutton").click(function() {
   }
 })
 
+$(layout).on('endbounce', function() {
+  console.log('bounce animation has stopped');
+});
 </script>
 
 </body>
