Line up fonts and spacing in sidebar items.

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -47,7 +47,7 @@
       <a id = "new_class">New Class</a>
     </li>
     <li>
-      <div class = "invisible" id = "undo_div"><a id = "undo" class="fa fa-undo"> Undo</a></div>
+      <div class = "invisible" id = "undo_div"><a id = "undo"><span class="fa fa-undo"></span> Undo</a></div>
     </li>
     <li>
       <a id = "help_button">Help</a>
