pin/unpin fixed default visibility

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -275,7 +275,7 @@ $(layout).on('clustersel', function(e) {
     $("#pinbutton").css("visibility","visible");
   }
 
- // $("#pinbutton").css("visibility", e.id < 0 ? "hidden" : "visible");
+  $("#pinbutton").css("visibility", e.id < 0 ? "hidden" : "visible");
 
 });
 
