Clicking on the word preferences should toggle the switch.

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -35,14 +35,14 @@
    <li class='active' ><a id='link_to_table_view' href='#'></a></li>
    <li class='last'><a id='link_to_group_view' href='group-view.html'></a></li>
    <li class='teachermode_switch'>
-      <p>
+      <p><label>
         <span id='teachermode_text'>preferences</span>
 
         <span class="switch">
             <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat init" type="checkbox">
             <label for="cmn-toggle-4"></label>
         </span>
-      </p>
+      </label></p>
     </li>
     <li>
       <a id = "new_class">New Class</a>
